// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PhotoPicker test render test render with previewSrc 1`] = `
<Component
  theme={
    Object {
      "a": Object {},
      "actionRow": Object {},
      "button": Object {},
      "container": Object {},
      "formContainer": Object {},
      "formField": Object {},
      "formRow": Object {},
      "formSection": Object {},
      "hint": Object {},
      "input": Object {},
      "inputLabel": Object {},
      "photoPickerButton": Object {},
      "photoPlaceholder": Object {},
      "radio": Object {},
      "sectionBody": Object {},
      "sectionFooter": Object {},
      "sectionFooterPrimaryContent": Object {},
      "sectionFooterSecondaryContent": Object {},
      "sectionHeader": Object {},
      "signInButton": Object {},
      "signInButtonContent": Object {},
      "signInButtonIcon": Object {},
      "strike": Object {},
      "strikeContent": Object {},
    }
  }
>
  <Component
    hint="Add you photos by clicking below"
    theme={
      Object {
        "a": Object {},
        "actionRow": Object {},
        "button": Object {},
        "container": Object {},
        "formContainer": Object {},
        "formField": Object {},
        "formRow": Object {},
        "formSection": Object {},
        "hint": Object {},
        "input": Object {},
        "inputLabel": Object {},
        "photoPickerButton": Object {},
        "photoPlaceholder": Object {},
        "radio": Object {},
        "sectionBody": Object {},
        "sectionFooter": Object {},
        "sectionFooterPrimaryContent": Object {},
        "sectionFooterSecondaryContent": Object {},
        "sectionHeader": Object {},
        "signInButton": Object {},
        "signInButtonContent": Object {},
        "signInButtonIcon": Object {},
        "strike": Object {},
        "strikeContent": Object {},
      }
    }
  >
    Photos
  </Component>
  <Component>
    The image has been selected
  </Component>
  <Picker
    accept="image/*"
    onPick={[Function]}
    theme={
      Object {
        "a": Object {},
        "actionRow": Object {},
        "button": Object {},
        "container": Object {},
        "formContainer": Object {},
        "formField": Object {},
        "formRow": Object {},
        "formSection": Object {},
        "hint": Object {},
        "input": Object {},
        "inputLabel": Object {},
        "photoPickerButton": Object {},
        "photoPlaceholder": Object {},
        "radio": Object {},
        "sectionBody": Object {},
        "sectionFooter": Object {},
        "sectionFooterPrimaryContent": Object {},
        "sectionFooterSecondaryContent": Object {},
        "sectionHeader": Object {},
        "signInButton": Object {},
        "signInButtonContent": Object {},
        "signInButtonIcon": Object {},
        "strike": Object {},
        "strikeContent": Object {},
      }
    }
    title="Select a Photo"
  />
</Component>
`;

exports[`PhotoPicker test render test render without previewSrc 1`] = `
<Component
  theme={
    Object {
      "a": Object {},
      "actionRow": Object {},
      "button": Object {},
      "container": Object {},
      "formContainer": Object {},
      "formField": Object {},
      "formRow": Object {},
      "formSection": Object {},
      "hint": Object {},
      "input": Object {},
      "inputLabel": Object {},
      "photoPickerButton": Object {},
      "photoPlaceholder": Object {},
      "radio": Object {},
      "sectionBody": Object {},
      "sectionFooter": Object {},
      "sectionFooterPrimaryContent": Object {},
      "sectionFooterSecondaryContent": Object {},
      "sectionHeader": Object {},
      "signInButton": Object {},
      "signInButtonContent": Object {},
      "signInButtonIcon": Object {},
      "strike": Object {},
      "strikeContent": Object {},
    }
  }
>
  <Component
    hint="Add you photos by clicking below"
    theme={
      Object {
        "a": Object {},
        "actionRow": Object {},
        "button": Object {},
        "container": Object {},
        "formContainer": Object {},
        "formField": Object {},
        "formRow": Object {},
        "formSection": Object {},
        "hint": Object {},
        "input": Object {},
        "inputLabel": Object {},
        "photoPickerButton": Object {},
        "photoPlaceholder": Object {},
        "radio": Object {},
        "sectionBody": Object {},
        "sectionFooter": Object {},
        "sectionFooterPrimaryContent": Object {},
        "sectionFooterSecondaryContent": Object {},
        "sectionHeader": Object {},
        "signInButton": Object {},
        "signInButtonContent": Object {},
        "signInButtonIcon": Object {},
        "strike": Object {},
        "strikeContent": Object {},
      }
    }
  >
    Photos
  </Component>
  <Component>
    <Component />
  </Component>
  <Picker
    accept="image/*"
    onPick={[Function]}
    theme={
      Object {
        "a": Object {},
        "actionRow": Object {},
        "button": Object {},
        "container": Object {},
        "formContainer": Object {},
        "formField": Object {},
        "formRow": Object {},
        "formSection": Object {},
        "hint": Object {},
        "input": Object {},
        "inputLabel": Object {},
        "photoPickerButton": Object {},
        "photoPlaceholder": Object {},
        "radio": Object {},
        "sectionBody": Object {},
        "sectionFooter": Object {},
        "sectionFooterPrimaryContent": Object {},
        "sectionFooterSecondaryContent": Object {},
        "sectionHeader": Object {},
        "signInButton": Object {},
        "signInButtonContent": Object {},
        "signInButtonIcon": Object {},
        "strike": Object {},
        "strikeContent": Object {},
      }
    }
    title="Select a Photo"
  />
</Component>
`;
